# NPU_Project

./: .gitattributes  .gitignore  .gitleaks.toml  .webui_secret_key  API_CONTRACT_V1.md  ARCHITECTURE.md  CLI_USAGE.md  CMakeLists.txt  CUTOVER_READINESS.md  Export-Diagnostics.ps1  Export-HfFolderToOpenVinoIR.ps1  Generate-Sbom.ps1  LICENSE  PUBLISH_GUIDE.md  README.md  SECURITY.md  acoulm.cmd  acoulm.ps1  acoulm.sh  benchmark_acoulm_toggle.ps1  build.ps1  build.sh  cutover_daily_check.ps1  debug_init.txt  hpc-setup.sh  install.ps1  loomis.ps1  npu_cli.ps1  npu_cli.sh  portable_setup.ps1  portable_setup.sh  preflight_check.ps1  refresh_stack.ps1  restart_backend.ps1  restart_backend.sh  restart_stack.ps1  restart_stack.sh  run.bat  run.ps1  run.sh  (+9 more)
.github/: dependabot.yml
.github/workflows/: build-test-windows.yml  ci-failure-triage.yml  ci-validate.yml  pages.yml  release.yml  secret-scan.yml
OpenVINO/Backend/: BackendPool.cpp  BackendPool.h  IBackend.h  KVCacheMonitor.cpp  KVCacheMonitor.h  OpenVINOBackend.cpp  OpenVINOBackend.h
OpenVINO/Scheduler/: IScheduler.h  OpenVINOScheduler.cpp  OpenVINOScheduler.h
Testbackend_OPENVINO/Backend/: BackendPool.cpp  IBackend.h  OpenVINOBackend.h
Testbackend_OPENVINO/Scheduler/: IScheduler.h  OpenVINOScheduler.cpp
app_shell/: app.js  index.html  styles.css
benchmark_outputs/: bench_rows_20260514-142010.json  bench_summary_20260514-142010.json  benchmark_run_log.txt  benchmark_run_log_2.txt  start_app_log.txt
models/Qwen3_0.6B_ov/: config.json  generation_config.json  openvino_detokenizer.xml  openvino_model.xml  openvino_tokenizer.xml
registry/: backends_registry.example.json  backends_registry.json  backends_registry.linux.example.json  models_registry.example.json  models_registry.json  performance_profile.example.json
scripts/: AcouLM-Device.ps1  Ensure-FastModel.ps1  Start-AcouLMBackend.ps1  acoulm_security.py
scripts/cuda/: acoulm_cuda_proxy.py
scripts/git/: strip_cursor_coauthor.sh  strip_cursor_msg.py
scripts/hpc/: README.txt  bootstrap.sh  configure_cuda_env.sh  ensure_toolchain.sh  export_hf_to_ir.sh  git_pull.sh  glibc_util.sh  install_llama_cuda.sh  install_openvino_genai.sh  launch_cuda_llm.sh  linux_setup.sh  local_env.example.sh  openvino_env.sh  run_in_ubuntu22.sh  runtime_libs.sh  setup_env.sh  slurm_acoulm.sbatch  start_server.sh  use_cuda_backend.sh
scripts/linux/: appshell_server.py  start_stack.sh
site/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
site/scripts/: postbuild.cjs
site/src/: App.tsx  main.tsx
site/src/components/: ApiSection.tsx  ArchitectureDiagram.tsx  BenchmarkSample.tsx  CliSection.tsx  DeploymentSection.tsx  Faq.tsx  FeatureGrid.tsx  Footer.tsx  GlossaryTerm.tsx  Hero.tsx  ModelsSection.tsx  Navbar.tsx  PathTracks.tsx  QuickStart.tsx  RunningPieces.tsx
site/src/data/: site.ts
site/src/layout/: DocsLayout.tsx
site/src/pages/: ApiPage.tsx  ArchitecturePage.tsx  CliPage.tsx  DocsPage.tsx  FaqPage.tsx  HomePage.tsx  ModelsPage.tsx  QuickStartPage.tsx
site/src/styles/: index.css
src/: ApiSecurity.cpp  ApiSecurity.hpp  InferenceRouting.cpp  InferenceRouting.h  RestAPIServer.cpp  RestAPIServer.h  RuntimeConfig.h  SpeculativeEngine.cpp  SpeculativeEngine.h  main.cpp  platform_util.cpp  platform_util.h
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
