[package]
name = "npu-companion"
version = "0.1.0"
edition = "2021"

# cdylib is required for the Tauri iOS and Android targets to build.
# On Windows desktop you only need rlib + bin, but keeping all three is harmless.
[lib]
name = "npu_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
